fix table selection wrapping on small devices

--- a/project-page/static/css/style.css
+++ b/project-page/static/css/style.css
@@ -109,6 +109,37 @@ input[type="checkbox"] {
   justify-content: center;
 }
 
+.selection-container {
+  display: block;
+  width: calc(100% - 20px);
+  max-width: 550px;
+  padding: 20px; 
+  box-sizing: border-box;
+  margin: 40px auto 0 auto;
+  background-color: #f5f5f5;
+  color: rgba(0, 0, 0, .7);
+  border: 1px solid #ddd;
+  border-radius: 8px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  text-align: center;
+}
+
+.selection {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+.selection label {
+  display: flex;
+  align-items: center;
+  margin-right: 15px; 
+}
+
+.selection-col {
+  flex: 0 1 auto;
+  max-width: none;
+}
+
 .legend-item {
   margin: 5px 10px;
   display: flex;
